img and name div alignment fix, plus css cleanup for mobile portrait

--- a/catalog/admin/templates/default/css/products.css
+++ b/catalog/admin/templates/default/css/products.css
@@ -33,6 +33,9 @@ body.dragging, body.dragging * { cursor: move !important; }
 
 #categories_filter_container { position:absolute; top:95px; left:30px; z-index:2; }
 
+.products-listing-thumb { float:left; width:32px; }
+.products-listing-name-model { margin-left:40px; }
+
 /* custom media queries */
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .dataTables_filter { float: none; text-align: left; }
