--- a/catalog/admin/templates/default/css/styles/custom.css
+++ b/catalog/admin/templates/default/css/styles/custom.css
@@ -867,7 +867,7 @@ select.error { border: 2px solid red !important; }
   position:absolute;
   width:50%;
   background-color:transparent;
-  top:43px;
+  top:38px;
   right:0px;
   padding: 5px 20px;
 }
@@ -881,7 +881,7 @@ select.error { border: 2px solid red !important; }
   overflow: hidden;
   background:url(../../../../images/get-pro.png) no-repeat center center;
 }
-=======
+
 .width-50 { width: 50%; }
 .width-66 { width: 66%; }
 .width-75 { width: 75%; }
@@ -1032,6 +1032,7 @@ select.error { border: 2px solid red !important; }
   }
   .branding-extra-line { margin-left: 10px; }
   #order_quick_info h4 { margin:0px 0px -10px;text-align:center; }
+  #buttons-menu-div-listing { padding: 5px; }
 }  
   
 @media screen and (max-width: 479px) {
@@ -1114,6 +1115,7 @@ select.error { border: 2px solid red !important; }
   }
   .branding-extra-line { margin-left: 0px; }
   #order_quick_info h4 { margin:0px 0px -10px;text-align:center; }
+  #buttons-menu-div-listing { padding: 5px; }
 }  
   
 @media screen and (max-width: 319px) {
@@ -1130,4 +1132,5 @@ select.error { border: 2px solid red !important; }
     width: 100%;
   }
   .branding-extra-line { margin-left: 0px; }
+  #buttons-menu-div-listing { padding: 5px; }
 }
